# DatAnalyzer-Python

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_mea_analysis.py
datanalyzer/: __init__.py  models.py
datanalyzer/part1_raw_data_handling/: __init__.py  datetime_utils.py  load_mea.py  mea_layout.py  read_h5.py
datanalyzer/part2_peak_handling/: __init__.py  find_peaks.py  rules.py
datanalyzer/part3_data_handling_and_analyses/: __init__.py  create_bpm_summary.py  update_bpm.py
