[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datanalyzer"
version = "0.1.0"
description = "MEA data analysis: load HDF5, find peaks, BPM summary"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "h5py>=3.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datanalyzer*"]
